2000-04-04  William A. Perkins  <wa_perkins@pnl.gov>

	* scripts/mass2gage.pl (Message): Gage data can be extracted as a
	cumulative frequency distribution.

2000-02-18  William A. Perkins  <wa_perkins@pnl.gov>

	* scripts/mass2gage.pl: needed to decrement the gage id

2000-02-04  William A. Perkins  <wa_perkins@pnl.gov>

	* mass2_main_025.f90: 
	* met_data_module.f90: 
	* block_bc_module.f90: 
	* table_bc_module.f90: 
	* global_module_023.f90: 
	* gage_output_module.f90: 
	* scalars_module.f90: EXIT() reqires argument for Lahey compiler 

1999-11-17  William A. Perkins  <wa_perkins@pnl.gov>

	* mass2_main_025.f90: added Marshall's code for handling
	  downstream velocity boundary conditions
	  The call to gage_print required a "cast" to double precision for
	  the "elapsed" arguement 

1999-10-20  William A. Perkins  <wa_perkins@pnl.gov>

	* makefile.linux (FLAGS): needed to generate lower case symbol
		  names in order to link to NetCDF

1999-09-09  William A. Perkins  <wa_perkins@pnl.gov>

	* tecplot/env.csh: check to see if TEC75HOME is set before we set
	  it

	* makefile.dec (MODULES): plot_output.mod was added

1999-08-29  William A. Perkins  <wa_perkins@pnl.gov>

	* gage_output_module.f90 (gage_print_netcdf): All output needed to
	  be assigned to a REAL temporary variable before writing to the
	  file 

1999-08-24  William A. Perkins  <wa_perkins@pnl.gov>

	* gage_output_module.f90: changed the output type for all NetCDF
	  variables (except time) from double to real

	* plot_output.f90: changed the output type for all NetCDF
	  variables (except time) from double to real

1999-08-16  William A. Perkins  <wa_perkins@pnl.gov>

	* plot_output.f90 (diag_plot_print): added -- this does the froude
	  and courant number calculations.

1999-08-11  William A. Perkins  <wa_perkins@pnl.gov>

	* mass2_main_025.f90: output to gridplot-metrics.dat is not made
		  if plot_do_tecplot is true

	* plot_output.f90 (plot_file_setup_netcdf): added grid metrics