@@ -1,5 +1,10 @@
 2000-04-04  William A. Perkins  <wa_perkins@pnl.gov>
 
+	* tecplot/env.csh: Changed TEC75HOME to	TEC80HOME 
+
+	* tecplot/mass2ld/Makefile (GUILIB): Changed TEC75HOME to
+	TEC80HOME
+
 	* scripts/mass2gage.pl (Message): Gage data can be extracted as a
 	cumulative frequency distribution.
 
